# distributeddatamgr_kv_store

./: .clang-format  1106.diff  AGENTS.md  BUILD.gn  CODEOWNERS  README_zh.md  bundle.json  graehqerhqr  kv_store.gni  kv_store_deps.gni
databaseutils/: BUILD.gn
databaseutils/include/: acl.h
databaseutils/mock/include/: log_print.h  mac_glibc.h  securec.h  win_glibc.h
databaseutils/mock/include/sys/: xattr.h
databaseutils/mock/src/: log_print.cpp
databaseutils/src/: acl.cpp
databaseutils/test/: BUILD.gn  acl_test.cpp  bool_virtual_test.cpp  data_query_virtual_test.cpp  datamgr_service_proxy_virtual_test.cpp  delegate_mgr_callback_virtual_test.cpp  distributed_kv_data_manager_vritual_test.cpp  kv_utils_virtual_test.cpp  kvdb_notifier_virtual_test.cpp  kvstore_datashare_bridge_virtual_test.cpp  local_kv_store_counterfeit_unit_test.cpp  local_kv_store_sham_test.cpp  local_kv_store_sham_unit_test.cpp  local_kv_store_virtual_test.cpp  local_subscribe_store_sham_test.cpp  local_subscribe_store_virtual_test.cpp  single_kvstore_client_virtual_test.cpp  single_kvstore_query_virtual_test.cpp  single_store_impl_sham_test.cpp  single_store_impl_virtual_test.cpp
frameworks/common/test/: BUILD.gn  concurrent_map_new_test.cpp  concurrent_map_test.cpp  concurrent_striped_map_new_test.cpp  concurrent_striped_map_test.cpp  dev_manager_mock_test_new_test.cpp  dev_manager_test_new_test.cpp  executor_pool_new_test.cpp  executor_pool_test.cpp  kv_general_store_unittest.cpp  kv_hiview_reporter_test_new_test.cpp  kv_manager_unittest.cpp  kvdb_communicator_deep_test.cpp  kvdb_communicator_test.cpp  kvdb_get_data_test.cpp  kvstore_data_virtual_test.cpp  lru_bucket_new_test.cpp  lru_bucket_test.cpp  lru_bucket_unittest.cpp  pool_new_test.cpp  pool_test.cpp  pool_unittest.cpp  priority_queue_new_test.cpp  priority_queue_test.cpp  priority_queue_unittest.cpp  security_manager_test_new_test.cpp  single_store_impl_mock_test_new_test.cpp  single_store_impl_virtual_test.cpp  store_factory_mock_test_new_test.cpp  store_util_test_new_test.cpp  task_executor_test.cpp  task_scheduler_test.cpp  task_scheduler_test_new_test.cpp  task_scheduler_unittest.cpp  traits_test.cpp  traits_test_new_test.cpp  traits_unittest.cpp
frameworks/ets/: BUILD.gn
frameworks/ets/idl/: kvstore.taihe  kvstoreImport.taihe
frameworks/ets/src/: ani_constructor.cpp  kvstore.impl.cpp  kvstoreImport.impl.cpp
frameworks/ets/taihe/kv_store/: BUILD.gn
frameworks/innerkitsimpl/crypt/: BUILD.gn  kv_store_crypt.cpp  kv_store_crypt.h
frameworks/innerkitsimpl/distributeddatafwk/test/: BUILD.gn  cfi_blocklist.txt
frameworks/innerkitsimpl/kvdb/: BUILD.gn
frameworks/innerkitsimpl/kvdb/distributeddb/: BUILD.gn  bundle.json
frameworks/innerkitsimpl/kvdb/include/: auto_sync_timer.h  backup_manager.h  convertor.h  data_change_notifier.h  dev_manager.h  distributeddata_kvdb_ipc_interface_code.h  kv_hiview_reporter.h  kv_types_util.h  kvdb_service.h  kvdb_service_client.h  observer_bridge.h  process_communication_impl.h  process_system_api_adapter_impl.h  security_manager.h  single_store_impl.h  store_factory.h  store_manager.h  store_result_set.h  store_util.h  task_executor.h  task_executor_adapter.h
frameworks/innerkitsimpl/kvdb/src/: auto_sync_timer.cpp  auto_sync_timer_mock.cpp  backup_manager.cpp  data_change_notifier.cpp  dev_manager.cpp  dev_manager_mock.cpp  device_convertor.cpp  device_convertor_mock.cpp  kv_hiview_reporter.cpp  kv_hiview_reporter_mock.cpp  kv_types_util.cpp  kvdb_service_client.cpp  observer_bridge.cpp  process_communication_impl.cpp  process_system_api_adapter_impl.cpp  security_manager.cpp  single_store_impl.cpp  store_factory.cpp  store_manager.cpp  store_result_set.cpp  store_util.cpp  system_api.cpp  task_executor.cpp  task_executor_adapter.cpp
frameworks/innerkitsimpl/kvdb/test/: BUILD.gn  auto_sync_timer_test.cpp  backup_manager_test.cpp  backup_manager_test_dep.cpp  backup_manager_test_method.cpp  backup_manager_unittest.cpp  cfi_blocklist.txt  data_change_notifier_test.cpp  dev_manager_mock_test.cpp  dev_manager_mock_unittest.cpp  dev_manager_test.cpp  dev_manager_unittest.cpp  device_manager_impl_mock.cpp  device_manager_impl_mock.h  device_manager_mock.cpp  device_manager_mock.h  kv_hiview_reporter_test.cpp  kvdb_anti_dos_sync_test.cpp  kvdb_communicator_proxy_test.cpp  kvdb_meta_data_test.cpp  kvdb_mock_sync_module_test.cpp  kvdb_multi_ver_p2p_sync_test.cpp  kvdb_relational_multi_user_test.cpp  kvdb_single_ver_dlp_test.cpp  kvdb_single_ver_msg_schedule_test.cpp  kvdb_single_ver_multi_sub_user_test.cpp  kvdb_single_ver_multi_user_test.cpp  kvdb_single_ver_p2p_complex_sync_test.cpp  (+29 more)
frameworks/libs/distributeddb/: BUILD.gn  cfi_blocklist.txt  distributeddb.gni
interfaces/cj/: BUILD.gn
interfaces/innerkits/distributeddata/: BUILD.gn  cfi_blocklist.txt
interfaces/innerkits/distributeddatamgr/: BUILD.gn
kvstoremock/distributeddb/: BUILD.gn
kvstoremock/external_inner_kit/ability_runtime/: BUILD.gn  mock_ability_connect_callback_stub.cpp  mock_ability_manager.cpp  mock_abilitykit_native.cpp  mock_ani_base_context.cpp  mock_app_context.cpp  mock_context.cpp  mock_data_ability_observer_stub.cpp  mock_extensionkit_native.cpp  mock_napi_base_context.cpp  mock_napi_common.cpp
kvstoremock/external_inner_kit/common_event_service/: BUILD.gn  mock_cesfwk_innerkits.cpp
kvstoremock/external_inner_kit/file_api/: BUILD.gn  mock_file.cpp
kvstoremock/external_inner_kit/hitrace/: BUILD.gn  mock_hitrace_chain.cpp  mock_hitrace_meter.cpp
kvstoremock/external_inner_kit/napi/: BUILD.gn  mock_ace_napi.cpp  mock_cj_bind_ffi.cpp  mock_cj_bind_native.cpp  mock_napi.cpp
kvstoremock/interfaces/mock/: BUILD.gn  mac_glibc.c  mac_glibc.cpp  mac_glibc.h  win_glibc.cpp  win_glibc.h
test/distributedtest/single_kvstore_client/: BUILD.gn  distributed_test.cpp  distributed_test_agent.cpp  distributed_test_helper.cpp  distributed_test_helper.h
test/fuzztest/kvstore_fuzzer/: BUILD.gn  kvstore_fuzzer.cpp  kvstore_fuzzer.h
test/fuzztest/typesutil_fuzzer/: BUILD.gn  typesutil_fuzzer.cpp
(+2338 files in other folders)
