# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

group("build_module"){
  if(kv_store_feature_mini) {
    deps = [
      "//foundation/distributeddatamgr/kv_store/interfaces/inner_api/kv_store:kv_store"
    ]
  }
  else{
    deps = [
      "//foundation/distributeddatamgr/kv_store/frameworks/innerkitsimpl/kvdb/distributeddb:build_module",
      "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:build_module",
      "//foundation/distributeddatamgr/kv_store/interfaces/jskits/distributeddata:build_module",
      "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/app:build_module",
      "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/framework:build_module",
      "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/service:build_module",
      "//foundation/distributeddatamgr/kv_store/conf:build_module" 
    ]
  }
}
group("build_native_test") {
  if(!kv_store_feature_mini) {
    testonly = true
    deps = [
      "frameworks/innerkitsimpl/distributeddatafwk/test:unittest",
      "frameworks/innerkitsimpl/kvdb/distributeddb/test:unittest",
    ]
  }
}

###############################################################################

group("distributeddatamgr_fuzztest") {
  testonly = true
  deps = [
    "foundation/distributeddatamgr/kv_store/frameworks/innerkitsimpl/kvdb/distributeddbtest:distributeddatamgr_fuzztest"
  ]
}

