# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

group("distributedtest") {
  testonly = true
  deps = []
  deps += [ "test/distributedtest/single_kvstore_client:distributedtest" ]
}

###############################################################################

group("build_native_test") {
  testonly = true
  deps = [
    "frameworks/innerkitsimpl/distributeddatafwk/test:unittest",
    "frameworks/libs/distributeddb/test:unittest",
    "frameworks/libs/distributeddb/test/moduletest:moduletest",
  ]
  if (!defined(global_parts_info.distributeddatamgr_arkdata_database_core)) {
    deps +=
        [ "frameworks/libs/distributeddb/gaussdb_rd/test/unittest:unittest" ]
  }
}

###############################################################################
group("unittest") {
  testonly = true
  deps = []
  deps += [
    "frameworks/common/test:unittest",
    "frameworks/innerkitsimpl/kvdb/test:unittest",
    "test/unittest/distributedKVStore:unittest",
    "test/unittest/distributeddata:unittest",
  ]
}

###############################################################################

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    "test/fuzztest/blob_fuzzer:fuzztest",
    "test/fuzztest/devicekvstorecapenabled_fuzzer:fuzztest",
    "test/fuzztest/devicekvstorecaprange_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoreget_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetcount_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetcountquery_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetentriesprefix_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetentriesquery_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetresultset_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetresultsetprefix_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoregetresultsetquery_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoreput_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoreputbatch_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoreremovedevicedata_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresecuritylevel_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresubscribe_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresubscribequery_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresynccallback_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresyncdelay_fuzzer:fuzztest",
    "test/fuzztest/devicekvstoresyncparam_fuzzer:fuzztest",
    "test/fuzztest/distributedkvdatamanager_fuzzer:fuzztest",
    "test/fuzztest/kvutil_fuzzer:fuzztest",
    "test/fuzztest/taskscheduler_fuzzer:fuzztest",
    "test/fuzztest/typesutil_fuzzer:fuzztest",
  ]
}
###############################################################################
