# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

module_output_path = "kv_store/databaseutils"
config("database_utils_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../include",
    "${kv_store_base_path}/frameworks/common",
  ]
}

ohos_unittest("DataBaseUtilsTest") {
  module_out_path = module_output_path

  sources = [ "acl_test.cpp" ]
  sources += [ "../src/acl.cpp" ]

  configs = [ ":database_utils_config" ]

  external_deps = [ "hilog:libhilog" ]
  public_external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest",
  ]
}

ohos_unittest("DataMgrServiceProxyVirtualTest") {
  module_out_path = module_output_path

  sources = [
    "${kv_store_base_path}/frameworks/innerkitsimpl/distributeddatasvc/src/datamgr_service_proxy.cpp",
    "datamgr_service_proxy_virtual_test.cpp",
  ]

  configs = [ ":database_utils_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    "${kv_store_base_path}/frameworks/libs/distributeddb/:distributeddb",
    "${kv_store_base_path}/interfaces/innerkits/distributeddata:distributeddata_inner",
    "${kv_store_base_path}/interfaces/innerkits/distributeddatamgr:distributeddata_mgr",
  ]
}

ohos_unittest("BlobVirtualTest") {
  module_out_path = module_output_path

  sources = [
    "${kv_store_base_path}/frameworks/innerkitsimpl/distributeddatasvc/src/datamgr_service_proxy.cpp",
    "bool_virtual_test.cpp",
  ]

  configs = [ ":database_utils_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    "${kv_store_base_path}/frameworks/libs/distributeddb/:distributeddb",
    "${kv_store_base_path}/interfaces/innerkits/distributeddata:distributeddata_inner",
    "${kv_store_base_path}/interfaces/innerkits/distributeddatamgr:distributeddata_mgr",
  ]
}

ohos_unittest("DataQueryVirtualTest") {
  module_out_path = module_output_path

  sources = [
    "${kv_store_base_path}/frameworks/innerkitsimpl/distributeddatasvc/src/datamgr_service_proxy.cpp",
    "data_query_virtual_test.cpp",
    "delegate_mgr_callback_virtual_test.cpp",
    "distributed_kv_data_manager_vritual_test.cpp",
    "kv_utils_virtual_test.cpp",
    "kvdb_notifier_virtual_test.cpp",
    "kvstore_datashare_bridge_virtual_test.cpp",
    "local_kv_store_virtual_test.cpp",
  ]

  configs = [ ":database_utils_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    "${kv_store_base_path}/frameworks/libs/distributeddb/:distributeddb",
    "${kv_store_base_path}/interfaces/innerkits/distributeddata:distributeddata_inner",
    "${kv_store_base_path}/interfaces/innerkits/distributeddatamgr:distributeddata_mgr",
  ]
}

group("unittest") {
  testonly = true

  deps = []
  deps += [ ":DataBaseUtilsTest" ]
}
###############################################################################
